--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.8.1",
     "react-native-permissions": "^5.3.0",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-snap-carousel": "^3.9.1",
