--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,6 +71,7 @@ def enableProguardInReleaseBuilds = false
  * this variant is about 6MiB larger per architecture than default.
  */
 def jscFlavor = 'io.github.react-native-community:jsc-android:2026004.+'
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 
 android {
     ndkVersion rootProject.ext.ndkVersion
@@ -82,25 +83,32 @@ android {
         applicationId "com.beresmobile"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 12
+        versionName "1.0.12"
+        // missingDimensionStrategy "store", "play"
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('fastrip.jks')
+            storePassword 'padang123'
+            keyAlias 'fastrip-alias'
+            keyPassword 'padang123'
+        }
+        release { 
+            storeFile file('fastrip.jks')
+            storePassword 'padang123'
+            keyAlias 'fastrip-alias'
+            keyPassword 'padang123'
         }
     }
     buildTypes {
         debug {
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
